--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@react-native-community/cli-platform-ios": "18.0.0",
     "@react-native/babel-preset": "0.79.3",
     "@react-native/eslint-config": "0.79.3",
-    "@react-native/metro-config": "0.79.3",
+    "@react-native/metro-config": "^0.80.0",
     "@react-native/typescript-config": "0.79.3",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
