--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/slider": "^4.5.7",
     "@react-native-vector-icons/common": "^12.0.0",
     "@react-native-vector-icons/evil-icons": "^12.0.0",
